<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/colorButton">

    <ImageView
        android:id="@+id/textureView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ShortLink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGray1"
        android:backgroundTint="@color/colorGray1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textureView" />

    <ImageView
        android:id="@+id/History"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGray2"
        android:backgroundTint="@color/colorGray2"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShortLink" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/text_history"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/History"
        app:layout_constraintEnd_toEndOf="@+id/History"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/History" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/text_shortlink"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ShortLink"
        app:layout_constraintEnd_toEndOf="@+id/ShortLink"
        app:layout_constraintStart_toStartOf="@+id/ShortLink"
        app:layout_constraintTop_toBottomOf="@+id/textureView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/text_menu"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textureView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>